--- a/carrito.html
+++ b/carrito.html
@@ -62,7 +62,7 @@
                 <a href="LOCAL" class="buy__person">
                     <i class="fa-solid fa-person-walking"></i>
                 </a>
-                <h2 class="buy__textop">PARA RECOGER</h2>
+                <h2 class="buy__textop">RECOGER</h2>
             </div>
 
         </article>
